--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telegram Game</title>
-    <!-- Подключаем Telegram Game API -->
+    <title>ANARCHISM</title>
     <script src="https://telegram.org/js/games.js"></script>
     <style>
         body {
-            background-color: #000; /* Чёрный фон */
-            color: #ff0000; /* Красный текст */
+            background-color: #000;
+            color: #ff0000;
             font-family: Arial, sans-serif;
             display: flex;
             flex-direction: column;
@@ -24,17 +23,20 @@
             text-shadow: 0 0 10px rgba(255, 0, 0, 0.7);
             margin-bottom: 30px;
         }
+        h2 {
+            text-shadow: 0 0 10px rgba(255, 0, 0, 0.7);
+            margin-bottom: 30px;
+        }
     </style>
 </head>
 <body>
-    <h1>НАЖМИТЕ НА КАРТИНКУ!</h1>
+    <h1>ANARCHY IS ORDER!</h1>
+    <h2>This is a new nft project dedicated to new anarchism, click on the logo to go to the our telegram channel</h2>
     <img id="gameImage" src="anarchy.jpg" alt="Переход в канал" width="300">
 
     <script>
-        // Обработка нажатия на картинку
         document.getElementById('gameImage').addEventListener('click', function() {
-            // Открываем канал в Telegram
-            TelegramGameProxy.openTelegramLink('https://t.me/ИМЯ_ВАШЕГО_КАНАЛА');
+            TelegramGameProxy.openTelegramLink('https://t.me/anarchyisorder');
         });
     </script>
 </body>
