--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
     <h1>ANARCHY IS ORDER!</h1>
     <h2>This is a new nft project dedicated to new anarchism, click on the logo to go to the our telegram channel</h2>
-    <img id="channelImage" src="anarchy,jpg" alt="PUNKS NOT DEAD", width="300">
+    <img id="channelImage" src="https://github.com/hoi-dot/argdagh/blob/main/anarchy.jpg?raw=true" alt="PUNKS NOT DEAD", width="300">
 
     <script>
         const webApp = Telegram.WebApp;
