--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 <body>
     <div class="header-container">
         <img src="anarchy.jpg" alt="Header" class="header-image" id="headerImage">
-        <div class="channel-link">CLICK ON THE LOGO TO JOIN OUR TELEGRAM CHANNEL</div>
+        <div class="channel-link"></div>
     </div>
     
     <div class="container">
